--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="username">Username</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="action_logout">Logout</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_main2">Main2Activity</string>
 
@@ -25,4 +26,9 @@
     <string name="title_fragment_timeline">Global</string>
     <string name="title_fragment_followings">Followings</string>
     <string name="title_fragment_profile">Profile</string>
+
+    <!-- Strings related to not2dos -->
+    <string name="action_report">Report Failure</string>
+    <string name="action_share">Share</string>
+    <string name="action_remove">Remove</string>
 </resources>
