Failed not2dos, app icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Not2Do</string>
 
     <!-- Strings related to login -->
-    <string name="hint_email">Email</string>
+    <string name="hint_email">Email/Username</string>
+    <string name="hint_email_only">Email</string>
     <string name="hint_password">Password</string>
     <string name="hint_name">Name</string>
     <string name="hint_surname">Surname</string>
