--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="surname">Surname</string>
     <string name="username">Username</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="action_everyone">All Users</string>
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
     <string name="section_format">Hello World from section: %1$d</string>
